chore: set version to 0.0.1

--- a/packages/tsapi-core/package.json
+++ b/packages/tsapi-core/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@oxc/tsapi-core",
+  "version": "0.0.1",
   "packageManager": "yarn@3.2.1",
   "main": "lib/index.js",
   "exports": {
