--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "build": "yarn workspaces foreach -t -v run build"
+  },
   "devDependencies": {
     "@yarnpkg/sdks": "^3.0.0-rc.7",
     "prettier": "2.6.2",
