--- a/packages/tsapi-client/package.json
+++ b/packages/tsapi-client/package.json
@@ -10,12 +10,18 @@
   },
   "scripts": {
     "build": "tsc",
-    "prepack": "yarn build"
+    "prepack": "yarn build",
+    "test": "yarn node --experimental-vm-modules $(yarn bin jest)"
   },
   "dependencies": {
     "@oxc/tsapi-core": "^0.0.1"
   },
   "devDependencies": {
-    "typescript": "^4.8.4"
+    "@jest/globals": "^29.1.2",
+    "@types/jest": "^29.1.1",
+    "jest": "^29.1.2",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4",
+    "zod": "^3.19.1"
   }
 }
