--- a/packages/tsapi-client/package.json
+++ b/packages/tsapi-client/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^29.1.1",
     "jest": "^29.1.2",
     "ts-jest": "^29.0.3",
+    "type-fest": "^3.0.0",
     "typescript": "^4.8.4",
     "zod": "^3.19.1"
   }
