--- a/packages/tsapi-core/package.json
+++ b/packages/tsapi-core/package.json
@@ -15,6 +15,7 @@
     "zod": "^3.0.0"
   },
   "devDependencies": {
+    "type-fest": "^3.0.0",
     "typescript": "^4.8.4",
     "zod": "^3.19.1"
   }
