--- a/packages/tsapi-client/package.json
+++ b/packages/tsapi-client/package.json
@@ -14,11 +14,11 @@
     "test": "yarn node --experimental-vm-modules $(yarn bin jest)"
   },
   "dependencies": {
+    "@jest/types": "^29.1.2",
     "@oxc/tsapi-core": "^0.0.1"
   },
   "devDependencies": {
     "@jest/globals": "^29.1.2",
-    "@types/jest": "^29.1.1",
     "jest": "^29.1.2",
     "ts-jest": "^29.0.3",
     "type-fest": "^3.0.0",
