--- a/packages/tsapi-client/package.json
+++ b/packages/tsapi-client/package.json
@@ -17,6 +17,9 @@
     "@jest/types": "^29.1.2",
     "@oxc/tsapi-core": "^0.0.1"
   },
+  "peerDependencies": {
+    "zod": "^3.0.0"
+  },
   "devDependencies": {
     "@jest/globals": "^29.1.2",
     "jest": "^29.1.2",
