--- a/tsconfig.common.json
+++ b/tsconfig.common.json
@@ -9,7 +9,7 @@
     "module": "ESNext",
     "moduleResolution": "NodeNext",
     "lib": ["es2020"],
-    "target": "ES6",
+    "target": "es2018",
     "outDir": "./dist",
     "baseUrl": "./src"
   }
