--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "yarn workspaces foreach -t -v run build"
+    "build": "yarn workspaces foreach -t -v run build",
+    "format": "prettier -w ."
   },
   "devDependencies": {
     "prettier": "2.8.8",
