--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@oxc/tsapi",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/oxc/tsapi"
+  },
   "packageManager": "yarn@3.5.0",
   "private": true,
   "workspaces": [
