--- a/packages/tsapi-core/package.json
+++ b/packages/tsapi-core/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@oxc/tsapi-core",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/oxc/tsapi"
+  },
   "packageManager": "yarn@3.2.1",
   "type": "module",
   "exports": {
