--- a/packages/tsapi-core/package.json
+++ b/packages/tsapi-core/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "repository": {
     "type": "git",
-    "url": "https://github.com/oxc/tsapi"
+    "url": "git+https://github.com/oxc/tsapi.git"
   },
   "type": "module",
   "exports": {
