ci: include d.ts files in npm packages

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "publishConfig": {
     "ignore": [
       "!lib/*.js",
+      "!lib/*.d.ts",
       "*.config.js",
       "src/",
       "test/"
